--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <title>Kolokwium 1</title>
     <link rel="stylesheet" href="style.css"></head>
+    <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
 
-
 <div class="box"></div>
-
 <button class="button">Zmień kolor</button>
-
 
 </body>
 </html>
